@@ -159,7 +159,7 @@ enum { R_PERIODS = 1, R_ETA, R_ROOTS, R_AB };
 
 enum { Qp_ROOT = 1, Qp_TATE };
 enum { Q_GROUPGEN = 5, Q_GLOBALRED, Q_ROOTNO, Q_MINIMALMODEL };
-enum { NF_MINIMALMODEL = 1, NF_GLOBALRED };
+enum { NF_MINIMALMODEL = 1, NF_GLOBALRED, NF_MINIMALPRIMES };
 
 /* common to Fp and Fq */
 enum { FF_CARD = 1, FF_GROUP, FF_GROUPGEN, FF_O };
