@@ -84,4 +84,15 @@
 4
 [10, [10], [[Mod(a^2, a^3 - a^2 + 1), Mod(-2*a^2 + 1, a^3 - a^2 + 1)]]]
 0.33753547062081148560344962283967451356
-Total time spent: 763
+
+[4 0]
+
+[0 4]
+
+
+[1 0]
+
+[0 1]
+
+10351
+Total time spent: 793
